# orchamp

./: .gitignore  AGENTS.md  README.md  babel.cfg  biome.json  bun.lockb  fly.toml  justfile  package.json  pyproject.toml
assets/: assumptions.js
docker/: compose.e2e.yml  orchamp.dockerfile
src/orchamp/: analyzer.py  cli.py  models.py  ranking.py  solver.py
src/orchamp/solvers/: __init__.py  cpsat.py
src/orchamp_get/: cli.py  html_transform.py  parser.py
src/orchamp_web/: app.py  assumptions.py  auth.py  cache.py  config.py  i18n.py  logs.py  routes.py  services.py  sources.py
src/orchamp_web/locales/: messages.pot
src/orchamp_web/locales/fr/LC_MESSAGES/: messages.po
src/orchamp_web/templates/: base.html  index.html  login.html  standings.html  team_analysis.html
src/orchamp_web/templates/partials/: assumptions_panel.html  schedule.html  standings_table.html
tests/e2e/: conftest.py  docker_config.toml  test_assumptions.py  test_main.py
tests/orchamp/: fixtures.py  test_analysis.py  test_models.py  test_ranking.py
tests/orchamp/cli/: test_analyze_team.py  test_standings.py  test_what_must_happen.py  test_who_can_win.py  util.py
tests/orchamp/cli/data/: impossible_league.json  rules.json  small_league.json
tests/orchamp/solvers/: test_cpsat.py
tests/orchamp_get/: test_cli.py  test_html_transform.py  test_parser.py  util.py
tests/orchamp_get/data/: standings.html
tests/orchamp_web/: test_assumptions.py  test_auth.py  test_sources.py
tests/orchamp_web/data/: config.toml
util/: build-static.js
