[project]
name = "orchamp"
version = "0.1.0"
description = "Championship analyzer"
readme = "README.md"
authors = [
    { name = "Bertrand Bonnefoy-Claudet", email = "bertrand@bertrandbc.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "beautifulsoup4>=4.14",
    "fastapi>=0.115",
    "gunicorn>=23.0.0",
    "httpx>=0.28",
    "jinja2>=3.1",
    "ortools>=9.11",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
orchamp = "orchamp.cli:main"
orchamp-get = "orchamp_get.cli:main"

[dependency-groups]
dev = [
    "inline-snapshot>=0.18",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.4",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["multiprocessing"]
patch = ["subprocess"]
